--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Aerial by HTML5 UP</title>
+    <title>Yuliya</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
